1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* confh.test: if include/Makefile.am is created, the test fails

1999-03-27  Tom Tromey  <tromey@cygnus.com>

	* extra4.test: Allow EXTRA_DATA to be specified.

1999-03-22  Tom Tromey  <tromey@cygnus.com>

	* ldadd.test: Use AC_PROG_LIBTOOL, not AM_PROG_LIBTOOL.

	* pluseq7.test: New file.
	* Makefile.am (TESTS): Added pluseq7.test.
	* pluseq6.test: New file.
	* Makefile.am (TESTS): Added pluseq6.test.

1999-03-21  Tom Tromey  <tromey@cygnus.com>

	* nodep.test: New file.
	* Makefile.am (TESTS): Added nodep.test.

	* subdir3.test: Correctly mention _SOURCES in Makefile.am.

	* subdir3.test: New file.
	* Makefile.am (TESTS): Added subdir3.test.
	* xsource.test: Changed to check whether multiple source files
	with same object name cause failure.

1999-03-11  Tom Tromey  <tromey@cygnus.com>

	* libobj9.test: New file.
	* Makefile.am (TESTS): Added libobj9.test.

	* insthook.test: Don't require GNU grep.  From John Pierce.

	* lex3.test: New file.
	* Makefile.am (TESTS): Added lex3.test.

1999-03-01  Tom Tromey  <tromey@cygnus.com>

	* ansi3.test: Use no-dependencies option to avoid GNU make
	requirement.  From Jerome Lovy.

1999-02-27  Tom Tromey  <tromey@cygnus.com>

	* ext.test (foo_SOURCES): New file.
	* Makefile.am (TESTS): Added ext.test.

1999-02-11  Tom Tromey  <tromey@cygnus.com>

	* cygwin32.test: Use AC_EXEEXT, not AM_EXEEXT.

	* obsolete2.test: New file.
	* Makefile.am (TESTS): Added obsolete2.test.

1999-02-01  Tom Tromey  <tromey@cygnus.com>

	* installsh.test (AUTOMAKE): Use $PERL.  From Pavel Roskin.

	* cond5.test: Sleep 15 seconds, not 5.  Some people still run the
	test on slow machines.

1999-01-22  Tom Tromey  <tromey@cygnus.com>

	* copy.test: New file.
	* Makefile.am (TESTS): Added copy.test.

	* ppf77.test: New file.
	* Makefile.am (TESTS): Added ppf77.test.

1999-01-14  Tom Tromey  <tromey@cygnus.com>

	* confh3.test: New file.
	* Makefile.am (TESTS): Added confh3.test.
