@@ -1,0 +1,16 @@
+#! /bin/sh
+
+# Make sure MAINTAINERCLEANFILES works.
+# Report from Paul D. Smith.
+
+. $srcdir/defs || exit 1
+
+cat > Makefile.am << 'END'
+MAINTAINERCLEANFILES = foo
+END
+
+: > FOO
+
+$AUTOMAKE || exit 1
+
+grep 'rm ..MAINTAINERCLEANFILES.' Makefile.in
