@@ -1,3 +1,8 @@
+1999-03-30  Tom Tromey  <tromey@cygnus.com>
+
+	* mclean.test: New file.
+	* Makefile.am (TESTS): Added mclean.test.
+
 1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* confh.test: if include/Makefile.am is created, the test fails
